--- a/spreadsplug/web/client/package.json
+++ b/spreadsplug/web/client/package.json
@@ -3,30 +3,30 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
-    "node-sass": "~0.7.0",
-    "webpack": "~1.3",
-    "jsx-loader": "~0.11.0",
-    "sass-loader": "~0.1.1",
-    "style-loader": "~0.6.3",
-    "css-loader": "~0.6.12",
-    "imports-loader": "~0.6.2",
-    "raw-loader": "~0.5.1",
-    "file-loader": "~0.5.1",
-    "url-loader": "~0.5.5",
-    "jest-cli": "~0.1.2",
+    "jsx-loader": "~0.13.2",
+    "css-loader": "~5.0.0",
+    "file-loader": "~6.1.1",
+    "imports-loader": "~1.2.0",
+    "node-sass": "~4.14.1",
+    "raw-loader": "~4.0.2",
     "react-tools": "~0.11.0",
+    "sass-loader": "~10.0.3",
+    "style-loader": "~2.0.0",
+    "url-loader": "~4.1.1",
+    "webpack": "~5.1.3",
+    "webpack-cli": "^4.0.0",
     "zurb-foundation": "https://github.com/zurb/foundation/archive/v5.3.0.tar.gz"
   },
   "dependencies": {
-    "envify": "~1.2.1",
-    "react": "~0.11.0",
-    "underscore": "~1.7.0",
     "backbone": "~1.1.2",
+    "backbone-deep-model": "~0.11.0",
+    "connect-fonts-opensans": "0.0.5",
+    "envify": "~1.2.1",
+    "font-awesome": "~4.1.0",
     "jquery": "~2.1.1",
     "mousetrap": "0.0.1",
-    "font-awesome": "~4.1.0",
-    "connect-fonts-opensans": "0.0.5",
-    "backbone-deep-model": "~0.11.0",
+    "react": "~0.11.0",
+    "underscore": "~1.7.0",
     "underscore.deep": "~0.3.0"
   },
   "jest": {
