--- a/spreadsplug/web/client/package.json
+++ b/spreadsplug/web/client/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
-    "jsx-loader": "~0.13.2",
     "css-loader": "~5.0.0",
     "file-loader": "~6.1.1",
+    "foundation-sites": "^6.6.3",
     "imports-loader": "~1.2.0",
+    "jsx-loader": "~0.13.2",
     "node-sass": "~4.14.1",
     "raw-loader": "~4.0.2",
     "react-tools": "~0.11.0",
@@ -14,8 +15,7 @@
     "style-loader": "~2.0.0",
     "url-loader": "~4.1.1",
     "webpack": "~5.1.3",
-    "webpack-cli": "^4.0.0",
-    "zurb-foundation": "https://github.com/zurb/foundation/archive/v5.3.0.tar.gz"
+    "webpack-cli": "^4.0.0"
   },
   "dependencies": {
     "backbone": "~1.1.2",
