--- a/spreadsplug/web/client/package.json
+++ b/spreadsplug/web/client/package.json
@@ -10,7 +10,7 @@
     "jsx-loader": "~0.13.2",
     "node-sass": "~4.14.1",
     "raw-loader": "~4.0.2",
-    "react-tools": "~0.11.0",
+    "react-tools": "^0.13.3",
     "sass-loader": "~10.0.3",
     "style-loader": "~2.0.0",
     "url-loader": "~4.1.1",
@@ -24,8 +24,9 @@
     "envify": "~1.2.1",
     "font-awesome": "~4.1.0",
     "jquery": "~2.1.1",
+    "merge": "^1.2.1",
     "mousetrap": "0.0.1",
-    "react": "~0.11.0",
+    "react": "^16.14.0",
     "underscore": "~1.7.0",
     "underscore.deep": "~0.3.0"
   },
