--- a/spreadsplug/web/client/package.json
+++ b/spreadsplug/web/client/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "backbone": "~1.1.2",
     "backbone-deep-model": "~0.11.0",
+    "classnames": "^2.2.6",
     "connect-fonts-opensans": "0.0.5",
     "envify": "~1.2.1",
     "font-awesome": "~4.1.0",
