Resolve problem "React.createClass is not a function" https://linguinecode.com/post/react-createclass-is-not-a-function

--- a/spreadsplug/web/client/package.json
+++ b/spreadsplug/web/client/package.json
@@ -22,6 +22,7 @@
     "backbone-deep-model": "~0.11.0",
     "classnames": "^2.2.6",
     "connect-fonts-opensans": "0.0.5",
+    "create-react-class": "^15.7.0",
     "envify": "~1.2.1",
     "font-awesome": "~4.1.0",
     "jquery": "~2.1.1",
