--- a/spreadsplug/web/client/package.json
+++ b/spreadsplug/web/client/package.json
@@ -30,6 +30,7 @@
     "mousetrap": "0.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "underscore": "~1.7.0",
     "underscore.deep": "~0.3.0"
   },
